[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio="1.25.0"
colorful="0.2.2"
tokio={version="1.25.0", features = ["full"]}
rust-raknet="0.12.0"
flate2 = "1.0.25"
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }